--- a/admin/src/edit_product.html
+++ b/admin/src/edit_product.html
@@ -21,13 +21,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="/src/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/src/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="/admin/src/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/admin/src/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/admin/css/bootstrap.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="/admin/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -201,18 +201,18 @@
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="/src/lib/chart/chart.min.js"></script>
-    <script src="/src/lib/easing/easing.min.js"></script>
-    <script src="/src/lib/waypoints/waypoints.min.js"></script>
-    <script src="/src/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/src/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/src/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/src/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="/admin/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/admin/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+    <script src="/admin/src/lib/chart/chart.min.js"></script>
+    <script src="/admin/src/lib/easing/easing.min.js"></script>
+    <script src="/admin/src/lib/waypoints/waypoints.min.js"></script>
+    <script src="/admin/src/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/admin/src/lib/tempusdominus/js/moment.min.js"></script>
+    <script src="/admin/src/lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="/admin/src/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="/src/js/main.js"></script>
+    <script src="/admin/src/js/main.js"></script>
 </body>
 
 </html>
