--- a/user/cart.html
+++ b/user/cart.html
@@ -45,7 +45,7 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
-
+    
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
@@ -72,9 +72,10 @@
                             </ul>
                         </div>
                         <div class="hearer_icon d-flex">
-                            <a class="cart" href="#">
+                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                            <a class="cart" data-bs-toggle="offcanvas" href="#quickCart" role="button" aria-controls="quickCart">
                                 <i class="fas fa-shopping-cart"></i>
-                                <span class="total_quantity">5</span>
+                                <span class="total_quantity">0</span>
                             </a>
                             
                         </div>
@@ -109,8 +110,9 @@
             <div class="row">
                 <div class="col-md-8">
                     <h4 class="cart_title">Giỏ hàng của bạn</h4>
-                    <div class="cart_product mb-5">
-                        <div class="cart_item mb-3 d-flex justify-content-between align-items-center">
+                    <div class="cart_area mb-5">
+                        <!--Template cart-item -->
+                        <!-- <div class="cart_item d-flex justify-content-between align-items-center">
                             <img class="product_img" src="img/bg1.jpg" alt="">
                             <div class="product_text d-flex flex-column">
                                 <div class="product_title">Product Name</div>
@@ -121,60 +123,8 @@
                                 <input class="input-number product_quantity" type="text" value="1" min="0">
                                 <span class="number-increment"><i class="ti-plus"></i></span>
                             </div>
-                            <a href="#" class="remove_product"><i class="far fa-trash-alt"></i></a>
-                        </div>
-                        <div class="cart_item mb-3 d-flex justify-content-between align-items-center">
-                            <img class="product_img" src="img/bg1.jpg" alt="">
-                            <div class="product_text d-flex flex-column">
-                                <div class="product_title">Product Name</div>
-                                <div class="subtotal_price">100.000</div>
-                            </div>
-                            <div class="product_count">
-                                <span class="number-decrement"><i class="ti-minus"></i></span>
-                                <input class="input-number product_quantity" type="text" value="1" min="0">
-                                <span class="number-increment"><i class="ti-plus"></i></span>
-                            </div>
-                            <a href="#" class="remove_product"><i class="far fa-trash-alt"></i></a>
-                        </div>
-                        <div class="cart_item mb-3 d-flex justify-content-between align-items-center">
-                            <img class="product_img" src="img/bg1.jpg" alt="">
-                            <div class="product_text d-flex flex-column">
-                                <div class="product_title">Product Name</div>
-                                <div class="subtotal_price">100.000</div>
-                            </div>
-                            <div class="product_count">
-                                <span class="number-decrement"><i class="ti-minus"></i></span>
-                                <input class="input-number product_quantity" type="text" value="1" min="0">
-                                <span class="number-increment"><i class="ti-plus"></i></span>
-                            </div>
-                            <a href="#" class="remove_product"><i class="far fa-trash-alt"></i></a>
-                        </div>
-                        <div class="cart_item mb-3 d-flex justify-content-between align-items-center">
-                            <img class="product_img" src="img/bg1.jpg" alt="">
-                            <div class="product_text d-flex flex-column">
-                                <div class="product_title">Product Name</div>
-                                <div class="subtotal_price">100.000</div>
-                            </div>
-                            <div class="product_count">
-                                <span class="number-decrement"><i class="ti-minus"></i></span>
-                                <input class="input-number product_quantity" type="text" value="1" min="0">
-                                <span class="number-increment"><i class="ti-plus"></i></span>
-                            </div>
-                            <a href="#" class="remove_product"><i class="far fa-trash-alt"></i></a>
-                        </div>
-                        <div class="cart_item mb-3 d-flex justify-content-between align-items-center">
-                            <img class="product_img" src="img/bg1.jpg" alt="">
-                            <div class="product_text d-flex flex-column">
-                                <div class="product_title">Product Name</div>
-                                <div class="subtotal_price">100.000</div>
-                            </div>
-                            <div class="product_count">
-                                <span class="number-decrement"><i class="ti-minus"></i></span>
-                                <input class="input-number product_quantity" type="text" value="1" min="0">
-                                <span class="number-increment"><i class="ti-plus"></i></span>
-                            </div>
-                            <a href="#" class="remove_product"><i class="far fa-trash-alt"></i></a>
-                        </div>
+                            <a href="#" class="remove_item"><i class="far fa-trash-alt"></i></a>
+                        </div> -->
                     </div>
                     <a href="/user/category.html" class="custom_btn btn_greylight ms-2">Tiếp tục lựa sản phẩm</a>
                 </div>
