--- a/user/index.html
+++ b/user/index.html
@@ -43,7 +43,7 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
-
+    
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
@@ -73,7 +73,7 @@
                             <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
                             <a class="cart" data-bs-toggle="offcanvas" href="#quickCart" role="button" aria-controls="quickCart">
                                 <i class="fas fa-shopping-cart"></i>
-                                <span class="total_quantity">5</span>
+                                <span class="total_quantity"></span>
                             </a>
                             
                         </div>
@@ -239,9 +239,8 @@
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
                                             </h4>
-                                            <div class="product_price">
-                                                <span class="price_number">100</span>
-                                                <span class="current_symbol">đ</span>
+                                            <div class="product_price current_prefix">
+                                                100
                                             </div>
                                         </div>
                                     </div>
@@ -260,9 +259,8 @@
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
                                             </h4>
-                                            <div class="product_price">
-                                                <span class="price_number">100</span>
-                                                <span class="current_symbol">đ</span>
+                                            <div class="product_price current_prefix">
+                                                100
                                             </div>
                                         </div>
                                     </div>
@@ -281,9 +279,8 @@
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
                                             </h4>
-                                            <div class="product_price">
-                                                <span class="price_number">100</span>
-                                                <span class="current_symbol">đ</span>
+                                            <div class="product_price current_prefix">
+                                                100
                                             </div>
                                         </div>
                                     </div>
@@ -302,9 +299,8 @@
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
                                             </h4>
-                                            <div class="product_price">
-                                                <span class="price_number">100</span>
-                                                <span class="current_symbol">đ</span>
+                                            <div class="product_price current_prefix">
+                                                100
                                             </div>
                                         </div>
                                     </div>
@@ -327,9 +323,8 @@
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
                                             </h4>
-                                            <div class="product_price">
-                                                <span class="price_number">100</span>
-                                                <span class="current_symbol">đ</span>
+                                            <div class="product_price current_prefix">
+                                                100
                                             </div>
                                         </div>
                                     </div>
@@ -348,9 +343,8 @@
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
                                             </h4>
-                                            <div class="product_price">
-                                                <span class="price_number">100</span>
-                                                <span class="current_symbol">đ</span>
+                                            <div class="product_price current_prefix">
+                                                100
                                             </div>
                                         </div>
                                     </div>
@@ -369,9 +363,8 @@
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
                                             </h4>
-                                            <div class="product_price">
-                                                <span class="price_number">100</span>
-                                                <span class="current_symbol">đ</span>
+                                            <div class="product_price current_prefix">
+                                                100
                                             </div>
                                         </div>
                                     </div>
@@ -390,9 +383,8 @@
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
                                             </h4>
-                                            <div class="product_price">
-                                                <span class="price_number">100</span>
-                                                <span class="current_symbol">đ</span>
+                                            <div class="product_price current_prefix">
+                                                100
                                             </div>
                                         </div>
                                     </div>
@@ -483,20 +475,7 @@
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <div class="q_cart_area">
-                <div class="q_cart_item d-flex justify-content-between align-items-center">
-                    <img class="product_img" src="img/bg1.jpg" alt="">
-                    <div class="product_text d-flex flex-column">
-                        <div class="product_title">Product Name</div>
-                        <div class="subtotal_price">100.000</div>
-                    </div>
-                    <div class="product_count">
-                        <span class="number-decrement"><i class="ti-minus"></i></span>
-                        <input class="input-number product_quantity" type="text" value="1" min="0">
-                        <span class="number-increment"><i class="ti-plus"></i></span>
-                    </div>
-                    <a ><i class="far fa-trash-alt"></i></a>
-                </div>
+            <div class="cart_area">
             </div>
         </div>
         <div class="offcanvas-footer">
