--- a/admin/src/login.html
+++ b/admin/src/login.html
@@ -52,6 +52,7 @@
                             </a>
                             <h3>Sign In</h3>
                         </div>
+                        <form action="/login" method="post">
                         <div class="form-floating mb-3">
                             <input type="text" class="form-control" id="account" placeholder="Nhập tên tài khoản">
                             <label for="floatingInput">Nhập tên tài khoản</label>
