--- a/user/checkout.html
+++ b/user/checkout.html
@@ -5,32 +5,27 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Deprop Studio</title>
+    <title>Checkout</title>
     <link rel="icon" href="img/logo/favicon_black.svg">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <!-- animate CSS -->
-    <link rel="stylesheet" href="css/animate.css">
     <!-- owl carousel CSS -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" href="css/all.css">
     <!-- flaticon CSS -->
-    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="css/themify-icons.css">
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <!-- swiper CSS -->
-    <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/slick.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div class="spinner-wrapper">
+        <div class="spinner-border text-light" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
     <!--::header part start::-->
     <header class="main_menu home_menu">
         <div class="container">
@@ -100,7 +95,6 @@
                 <li class="breadcrumb-item active" aria-current="page">Check out</li>
               </ol>
         </div>
-        
     </nav>
 
     <div class="checkout-part">
@@ -170,28 +164,13 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTPBank" aria-expanded="true" aria-controls="collapseTPBank">
                                         <input class="form-check-input me-2" type="radio" name="paymentMethod" id="tpbank" value="tpbank">
                                         <label class="form-check-label" for="tpbank">
-                                            Chuyển khoản TPBank
+                                            Chuyển khoản ngân hàng
                                         </label>
                                     </button>
                                 </h2>
                                 <div id="collapseTPBank" class="accordion-collapse collapse" aria-labelledby="headingTPBank" data-bs-parent="#paymentAccordion">
                                     <div class="accordion-body">
                                         Chuyển khoản thông qua ngân hàng TPBank của chúng tôi.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingMoMo">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMoMo" aria-expanded="false" aria-controls="collapseMoMo">
-                                        <input class="form-check-input me-2" type="radio" name="paymentMethod" id="momo" value="momo">
-                                        <label class="form-check-label" for="momo">
-                                            Quét mã ví Momo
-                                        </label>
-                                    </button>
-                                </h2>
-                                <div id="collapseMoMo" class="accordion-collapse collapse" aria-labelledby="headingMoMo" data-bs-parent="#paymentAccordion">
-                                    <div class="accordion-body">
-                                        Quét mã Ví Momo để thực hiện thanh toán.
                                     </div>
                                 </div>
                             </div>
@@ -266,13 +245,11 @@
         </div>
     </footer>
 
-
     <!-- jquery plugins here-->
-    <script src="js/jquery-1.12.1.min.js"></script>
-    <!-- popper js -->
-    <script src="js/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/min/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <!-- bootstrap js -->
-    <script src="js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- easing js -->
     <script src="js/jquery.magnific-popup.js"></script>
@@ -281,15 +258,11 @@
     <!-- slick js -->
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/contact.js"></script>
-    <script src="js/jquery.ajaxchimp.min.js"></script>
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/mail-script.js"></script>
     <!-- custom js -->
     <script src="js/custom.js"></script>
     <script src="js/all.js"></script>
+    <script src="js/backtotop.js"></script>
+    <script src="js/loading.js"></script>
 </body>
 
 </html>
