--- a/user/single-product.html
+++ b/user/single-product.html
@@ -5,29 +5,29 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Deprop Studio</title>
+  <title>Product Name</title>
   <link rel="icon" href="img/logo/favicon_black.svg">
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!-- animate CSS -->
-  <link rel="stylesheet" href="css/animate.css">
   <!-- owl carousel CSS -->
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="css/lightslider.min.css">
-  <!-- font awesome CSS -->
-  <link rel="stylesheet" href="css/all.css">
   <!-- flaticon CSS -->
-  <link rel="stylesheet" href="css/flaticon.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="css/themify-icons.css">
-  <!-- font awesome CSS -->
+  <!-- manific popup -->
   <link rel="stylesheet" href="css/magnific-popup.css">
   <!-- style CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <div class="spinner-wrapper">
+    <div class="spinner-border text-light" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+
    <!--::header part start::-->
   <header class="main_menu home_menu">
     <div class="container">
@@ -105,9 +105,9 @@
     <div class="container">
       <div class="row s_product_inner justify-content-between">
         <div class="col-lg-6">
-          <div class="s_product_img">
-                <img class="product_img" src="/user/img/item.jpg"  alt="Product Image"/>
-          </div>
+          <a href="/user/img/item.jpg" class="s_product_img">
+              <img class="product_img" src="/user/img/item.jpg"  alt="Product Image"/>
+          </a>
         </div>
         <div class="col-lg-6">
           <div class="s_product_text">
@@ -530,41 +530,32 @@
         </div>
     </div>
   </div>
-<!-- quick_cart end-->
+  <!-- quick_cart end-->
+
+  <button id="toTop">
+    <i class="fas fa-chevron-up"></i>
+  </button>
 
   <!-- jquery plugins here-->
-  <!-- jquery -->
-   
-  <script src="js/jquery-1.12.1.min.js"></script>
-  <!-- popper js -->
-  <script src="js/popper.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/min/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <!-- bootstrap js -->
-  <script src="js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!-- easing js -->
   <script src="js/jquery.magnific-popup.js"></script>
-  <!-- swiper js -->
-  <script src="js/lightslider.min.js"></script>
-  <!-- swiper js -->
-  <script src="js/masonry.pkgd.js"></script>
   <!-- particles js -->
   <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.nice-select.min.js"></script>
   <!-- slick js -->
   <script src="js/slick.min.js"></script>
-  <script src="js/swiper.jquery.js"></script>
   <script src="js/jquery.counterup.min.js"></script>
-  <script src="js/waypoints.min.js"></script>
-  <script src="js/contact.js"></script>
-  <script src="js/jquery.ajaxchimp.min.js"></script>
-  <script src="js/jquery.form.js"></script>
-  <script src="js/jquery.validate.min.js"></script>
-  <script src="js/mail-script.js"></script>
-  <script src="js/stellar.js"></script>
-
+  <!-- manific popup -->
+  <script src="js/jquery.magnific-popup.js"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <script src="js/all.js"></script>
+  <script src="js/backtotop.js"></script>
+  <script src="js/loading.js"></script>
 </body>
 
 </html>
