--- a/admin/src/product.html
+++ b/admin/src/product.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DeAdmin</title>
+    <title>Sản phẩm</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -21,18 +21,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="/src/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/src/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
-    <!-- Datatable Stylesheet -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.7/css/dataTables.bootstrap5.css">
-
+    <link href="/admin/src/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/admin/src/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/admin/css/bootstrap.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="/admin/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -57,9 +52,9 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active show" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý</a>
                         <div class="dropdown-menu bg-transparent border-0 show">
-                            <a href="/src/add_product.html" class="dropdown-item ">Tạo sản phẩm</a>
-                            <a href="/src/edit_product.html" class="dropdown-item">Chỉnh sửa sản phẩm</a>
-                            <a href="/src/product.html" class="dropdown-item active">Sản phẩm</a>
+                            <a href="/admin/src/add_product.html" class="dropdown-item ">Tạo sản phẩm</a>
+                            <a href="/admin/src/edit_product.html" class="dropdown-item">Chỉnh sửa sản phẩm</a>
+                            <a href="/admin/src/product.html" class="dropdown-item active">Sản phẩm</a>
                         </div>
                     </div>
                 </div>
@@ -186,30 +181,26 @@
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="/src/lib/chart/chart.min.js"></script>
-    <script src="/src/lib/easing/easing.min.js"></script>
-    <script src="/src/lib/waypoints/waypoints.min.js"></script>
-    <script src="/src/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/src/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/src/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/src/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="/admin/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/admin/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+    <script src="/admin/src/lib/chart/chart.min.js"></script>
+    <script src="/admin/src/lib/easing/easing.min.js"></script>
+    <script src="/admin/src/lib/waypoints/waypoints.min.js"></script>
+    <script src="/admin/src/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/admin/src/lib/tempusdominus/js/moment.min.js"></script>
+    <script src="/admin/src/lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="/admin/src/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="/src/js/main.js"></script>
+    <script src="/admin/src/js/main.js"></script>
+    <script src="/admin/src/js/drop-image.js"></script>
 
     <!-- Datatables -->
     <script src="https://cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/2.0.7/js/dataTables.bootstrap5.js"></script>
     <script src="https://cdn.datatables.net/select/2.0.2/js/dataTables.select.js"></script>
     <script src="https://cdn.datatables.net/select/2.0.2/js/select.dataTables.js"></script>
-    <script src="/src/lib/datatables/datatables.js"></script>
-    
-    
-
-
-
+    <script src="/admin/src/lib/datatables/datatables.js"></script>
 </body>
 
 </html>
