--- a/user/index.html
+++ b/user/index.html
@@ -399,7 +399,7 @@
             <div class="offer_text">
                 <h2>Cùng chọn sản phẩm decor<br> <span>phù hợp</span> với bạn nhé.</h2>
             </div>
-            <a href="" class="custom_btn btn_white">Đến cửa hàng</a>
+            <a href="category.html" class="custom_btn btn_white">Đến cửa hàng</a>
 
         </div>
     </section>
