--- a/user/order-success.html
+++ b/user/order-success.html
@@ -38,10 +38,13 @@
           Mã đơn hàng của bạn là <b class="order_code">123</b>
         </div>
         <div class="order_noti mb-2">
-          Chi tiết đơn hàng của bạn đã được gửi qua email.
+          Chi tiết đơn hàng của bạn đã được gửi qua <b>email</b>.
         </div>
-        <div class="contact_noti mb-5">
-          Deprop Studio sẽ liên hệ bạn qua số điện thoại để xác nhận đơn hàng trong vòng 24 giờ tới.
+        <div class="contact_noti mb-2">
+          Chúng mình sẽ liên hệ bạn qua <b>số điện thoại</b> để xác nhận đơn hàng trong vòng 24 giờ tới.
+        </div>
+        <div class="thanks_noti mb-5">
+          <b>Deprop Studio cảm ơn bạn vì đã sử dụng dịch vụ!</b>
         </div>
         <a href="index.html" class="custom_btn btn_black">Trở về trang chủ</a>
       </div>
