--- a/user/checkout.html
+++ b/user/checkout.html
@@ -38,10 +38,10 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
-
+    
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a class="nav-link" href="index.html">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
@@ -55,8 +55,8 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
-                                        Dịch vụ
+                                    <a class="nav-link" href="policy.html">
+                                        Chính sách
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -65,9 +65,10 @@
                             </ul>
                         </div>
                         <div class="hearer_icon d-flex">
-                            <a class="cart" href="#">
+                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                            <a class="cart" data-bs-toggle="offcanvas" href="#quickCart" role="button" aria-controls="quickCart">
                                 <i class="fas fa-shopping-cart"></i>
-                                <span class="total_quantity">5</span>
+                                <span class="total_quantity"></span>
                             </a>
                             
                         </div>
