--- a/user/category.html
+++ b/user/category.html
@@ -256,7 +256,7 @@
                             </a>
                             <div class="single_product_text">
                                 <h5 class="product_category">
-                                    <a class="text-muted-1" href="#">Furniture</a>
+                                    <a class="text-muted-1 category-link" href="#" data-category="furniture">Furniture</a>
                                 </h5>
                                 <h4 class="product_title">
                                     <a href="single-product.html">red modern</a>
@@ -524,16 +524,16 @@
    <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
    <!-- bootstrap js -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-   <!-- easing js -->
-   <script src="js/jquery.magnific-popup.js"></script>
-   <!-- particles js -->
-   <script src="js/owl.carousel.min.js"></script>
-   <!-- slick js -->
-   <script src="js/slick.min.js"></script>
-   <script src="js/jquery.counterup.min.js"></script>
-   <!-- custom js -->
-   <script src="js/custom.js"></script>
-   <script src="js/all.js"></script>
+   <!-- owl carousel plugin-->
+   <script src="js/plugins/owl.carousel.min.js"></script>
+   <!-- manific-popup plugin-->
+   <script src="js/plugins/jquery.magnific-popup.js"></script>
+   <!-- main js -->
+   <script src="js/jquery.js"></script>
+   <script src="js/common.js"></script>
+   <script src="js/addtocart.js"></script>
+   <script src="js/filter_sort.js"></script>
+   <!-- extra js --> 
    <script src="js/backtotop.js"></script>
    <script src="js/loading.js"></script>
 </body>
