--- a/user/index.html
+++ b/user/index.html
@@ -12,8 +12,9 @@
     <!-- owl carousel CSS -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <!-- flaticon CSS -->
+    <!-- icon CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@icon/themify-icons@1.0.1-alpha.3/themify-icons.min.css">
     <link rel="stylesheet" href="css/themify-icons.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -229,7 +230,7 @@
                                         
                                         <div class="single_product_text">
                                             <h5 class="product_category">
-                                                <a class="text-muted-1" href="#">Category</a>
+                                                <a class="text-muted-1 category-link" data-category="tree">tree</a>
                                             </h5>
                                             <h4 class="product_title">
                                                 <a href="single-product.html">Product Name</a>
@@ -495,16 +496,16 @@
     <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!-- easing js -->
-    <script src="js/jquery.magnific-popup.js"></script>
-    <!-- particles js -->
-    <script src="js/owl.carousel.min.js"></script>
-    <!-- slick js -->
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <!-- custom js -->
-    <script src="js/custom.js"></script>
-    <script src="js/all.js"></script>
+    <!-- owl carousel plugin-->
+    <script src="js/plugins/owl.carousel.min.js"></script>
+    <!-- manific-popup plugin-->
+    <script src="js/plugins/jquery.magnific-popup.js"></script>
+    <!-- main js -->
+    <script src="js/jquery.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/addtocart.js"></script>
+    <script src="js/filter_sort.js"></script>
+    <!-- extra js --> 
     <script src="js/backtotop.js"></script>
     <script src="js/loading.js"></script>
 </body>
