--- a/user/single-product.html
+++ b/user/single-product.html
@@ -43,7 +43,7 @@
 
                     <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="index.html">Trang chủ</a>
                             </li>
                             <li class="nav-item">
@@ -542,18 +542,16 @@
   <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <!-- bootstrap js -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <!-- easing js -->
-  <script src="js/jquery.magnific-popup.js"></script>
-  <!-- particles js -->
-  <script src="js/owl.carousel.min.js"></script>
-  <!-- slick js -->
-  <script src="js/slick.min.js"></script>
-  <script src="js/jquery.counterup.min.js"></script>
-  <!-- manific popup -->
-  <script src="js/jquery.magnific-popup.js"></script>
-  <!-- custom js -->
-  <script src="js/custom.js"></script>
-  <script src="js/all.js"></script>
+  <!-- owl carousel plugin-->
+  <script src="js/plugins/owl.carousel.min.js"></script>
+  <!-- manific-popup plugin-->
+  <script src="js/plugins/jquery.magnific-popup.js"></script>
+  <!-- main js -->
+  <script src="js/jquery.js"></script>
+  <script src="js/common.js"></script>
+  <script src="js/addtocart.js"></script>
+  <script src="js/filter_sort.js"></script>
+  <!-- extra js --> 
   <script src="js/backtotop.js"></script>
   <script src="js/loading.js"></script>
 </body>
