--- a/user/order-failure.html
+++ b/user/order-failure.html
@@ -10,12 +10,20 @@
     <title>Đặt hàng thất bại</title>
     <link rel="icon" href="img/logo/favicon_black.svg" />
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <!-- flaticon CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="css/themify-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/themify-icons.css" />
     <!-- style CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -23,28 +31,29 @@
       <div class="spinner-border text-light" role="status">
         <span class="visually-hidden">Loading...</span>
       </div>
-  </div>
-  
+    </div>
+
     <section class="successnoti_part">
-      <a class="logo" href="index.html"> <img src="/user/img/logo/black_logo.png" alt="logo"></a>
+      <a class="logo" href="index.html">
+        <img src="/user/img/logo/black_logo.png" alt="logo"
+      /></a>
       <div class="successnoti_area">
         <div class="successnoti_title">
           <i class="far fa-times-circle fa-4x mb-3"></i>
-          <div class="successnoti_text mb-3">
-            Đặt hàng thất bại
-          </div>
+          <div class="successnoti_text mb-3">Đặt hàng thất bại</div>
         </div>
         <div class="order_noti mb-5">
-          Thanh toán của bạn đã thất bại.<br> Vui lòng trở về trang checkout hoặc trang chủ.
+          Thanh toán của bạn đã thất bại.<br />
+          Vui lòng trở về trang checkout hoặc trang chủ.
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <a href="index.html" class="custom_btn btn_black">Trở về Checkout</a>
-            <a href="index.html" class="custom_btn btn_greylight">Trở về Trang chủ</a>
+          <a href="index.html" class="custom_btn btn_black">Trở về Checkout</a>
+          <a href="index.html" class="custom_btn btn_greylight"
+            >Trở về Trang chủ</a
+          >
         </div>
-        
       </div>
     </section>
-
 
     <footer class="footer_part">
       <div class="copyright_part">
@@ -64,43 +73,63 @@
       </div>
     </footer>
 
-    <div class="quick_cart offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1" id="quickCart" aria-labelledby="quickCartLabel">
-        <div class="offcanvas-header">
-            <h4 class="offcanvas-title" id="quickCartLabel">Giỏ hàng</h4>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <div
+      class="quick_cart offcanvas offcanvas-end"
+      data-bs-scroll="true"
+      data-bs-backdrop="true"
+      tabindex="-1"
+      id="quickCart"
+      aria-labelledby="quickCartLabel"
+    >
+      <div class="offcanvas-header">
+        <h4 class="offcanvas-title" id="quickCartLabel">Giỏ hàng</h4>
+        <button
+          type="button"
+          class="btn-close text-reset"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <div class="cart_area"></div>
+      </div>
+      <div class="offcanvas-footer">
+        <div
+          class="total_area d-flex align-items-center justify-content-between"
+        >
+          <span class="total_text">Tổng:</span>
+          <span class="total_price">100.000đ</span>
         </div>
-        <div class="offcanvas-body">
-            <div class="cart_area">
-            </div>
+        <div class="cart_button row">
+          <a href="/user/cart.html" class="custom_btn btn_black btn-block"
+            >View cart</a
+          >
         </div>
-        <div class="offcanvas-footer">
-            <div class="total_area d-flex align-items-center justify-content-between">
-                <span class="total_text">Tổng:</span>
-                <span class="total_price">100.000đ</span>
-            </div>
-            <div class="cart_button row">
-                <a href="/user/cart.html" class="custom_btn btn_black btn-block">View cart</a>
-            </div>
-        </div>
+      </div>
     </div>
 
     <!-- jquery plugins here-->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/min/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <!-- bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!-- easing js -->
-    <script src="js/jquery.magnific-popup.js"></script>
-    <!-- particles js -->
-    <script src="js/owl.carousel.min.js"></script>
-    <!-- slick js -->
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <!-- custom js -->
-    <script src="js/custom.js"></script>
-    <script src="js/all.js"></script>
-    <script src="js/backtotop.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <!-- owl carousel plugin-->
+    <script src="js/plugins/owl.carousel.min.js"></script>
+    <!-- manific-popup plugin-->
+    <script src="js/plugins/jquery.magnific-popup.js"></script>
+    <!-- main js -->
+    <script src="js/jquery.js"></script>
+    <script src="js/common.js"></script>
+    <!-- extra js -->
     <script src="js/loading.js"></script>
   </body>
 </html>
