--- a/user/cart.html
+++ b/user/cart.html
@@ -176,7 +176,7 @@
                   </div>
                   <div class="mb-3">
                     <div class="rent_day_count">
-                      Số ngày thuê: <strong id="dayCount"></strong> ngày
+                      Số ngày thuê: <strong id="dayCount" class="rent_day"></strong> ngày
                     </div>
                     <div id="feedbackMsg" class="mt-2"></div>
                   </div>
