--- a/user/checkout.html
+++ b/user/checkout.html
@@ -162,8 +162,26 @@
               <li
                 class="total_area list-group-item d-flex justify-content-between"
               >
-                <strong><span>Tổng tiền:</span></strong>
+                <span>Tổng tiền:</span>
                 <strong><span class="total_price"></span></strong>
+              </li>
+              <li
+                class="total_area list-group-item d-flex justify-content-between"
+              >
+                <span>Số ngày thuê:</span>
+                <strong>x<span id="dayCount" class="rent_day"></span> ngày</strong>
+              </li>
+              <li
+                class="total_area list-group-item d-flex justify-content-between"
+              >
+                <span>Phí vận chuyển:</span>
+                <strong><span class="delivery_fee"></span></strong>
+              </li>
+              <li
+                class="total_area list-group-item d-flex justify-content-between"
+              >
+                <strong><span>Tổng thanh toán:</span></strong>
+                <strong><span class="total_payment">50</span></strong>
               </li>
             </ul>
             <h4 class="mb-3">Phương thức thanh toán</h4>
