--- a/user/checkout.html
+++ b/user/checkout.html
@@ -181,7 +181,7 @@
                 class="total_area list-group-item d-flex justify-content-between"
               >
                 <strong><span>Tổng thanh toán:</span></strong>
-                <strong><span class="total_payment">50</span></strong>
+                <strong><span class="total_payment"></span></strong>
               </li>
             </ul>
             <h4 class="mb-3">Phương thức thanh toán</h4>
