--- a/user/cart.html
+++ b/user/cart.html
@@ -50,8 +50,8 @@
               <button
                 class="navbar-toggler"
                 type="button"
-                data-toggle="collapse"
-                data-target="#navbarSupportedContent"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent"
                 aria-expanded="false"
                 aria-label="Toggle navigation"
@@ -71,7 +71,7 @@
                     <a class="nav-link" href="category.html"> Sản phẩm </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="category.html"> Combo </a>
+                    <a class="nav-link" href="combo.html"> Combo </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="category.html"> Dịch vụ </a>
