--- a/user/combo.html
+++ b/user/combo.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Sản phẩm</title>
+    <title>Set Combo</title>
     <link rel="icon" href="/images/logo/favicon_black.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -30,8 +30,8 @@
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
@@ -41,13 +41,13 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Trang chủ</a>
                                 </li>
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a class="nav-link" href="category.html">
                                         Sản phẩm
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="combo.html">
                                         Combo
                                     </a>
                                 </li>
@@ -96,10 +96,6 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 01</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
-                    </p>
                 </div>
             </div>
             <div class="item">
@@ -107,10 +103,6 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 02</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
-                    </p>
                 </div>
             </div>
             <div class="item">
@@ -118,10 +110,6 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 03</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
-                    </p>
                 </div>
             </div>
             <div class="item">
@@ -129,29 +117,17 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 04</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
-                    </p>
                 </div>
             </div>
             <div class="item">
-                <img src="image/img5.jpg">
+                <img src="/images/combo/b2.jpg">
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 05</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
-                    </p>
                 </div>
             </div>
         </div>
-        <!-- button arrows -->
-        <div class="arrows">
-            <button id="prev"><i class="fas fa-angle-left"></i></button>
-            <button id="next"><i class="fas fa-angle-right"></i></button>
-        </div>
+
         <!-- thumbnail -->
         <div class="thumbnail">
             <div class="item active">
@@ -167,19 +143,19 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="/images/combo/b3.jpg">
                 <div class="content">
                     Name Slider
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="/images/combo/b1.jpg">
                 <div class="content">
                     Name Slider
                 </div>
             </div>
             <div class="item">
-                <img src="image/img5.jpg">
+                <img src="/images/combo/b2.jpg">
                 <div class="content">
                     Name Slider
                 </div>
