--- a/user/index.html
+++ b/user/index.html
@@ -34,13 +34,12 @@
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
-    
-                        <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse main-menu-item" id="navbarToggleExternalContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
                                     <a class="nav-link" href="index.html">Trang chủ</a>
@@ -51,7 +50,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
+                                    <a class="nav-link" href="combo.html">
                                         Combo
                                     </a>
                                 </li>
@@ -71,7 +70,6 @@
                                 <i class="fas fa-shopping-cart"></i>
                                 <span class="total_quantity"></span>
                             </a>
-                            
                         </div>
                     </nav>
                 </div>
