update combo page

--- a/user/combo.html
+++ b/user/combo.html
@@ -96,6 +96,10 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 01</h2>
+                    <div class="combo_price">
+                        <span class="current_prefix manual_price">100</span>
+                        <span class="current_prefix sale_price">50</span>
+                    </div>
                 </div>
             </div>
             <div class="item">
@@ -103,6 +107,10 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 02</h2>
+                    <div class="combo_price">
+                        <span class="current_prefix manual_price">100</span>
+                        <span class="current_prefix sale_price">50</span>
+                    </div>
                 </div>
             </div>
             <div class="item">
@@ -110,6 +118,10 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 03</h2>
+                    <div class="combo_price">
+                        <span class="current_prefix manual_price">100</span>
+                        <span class="current_prefix sale_price">50</span>
+                    </div>
                 </div>
             </div>
             <div class="item">
@@ -117,6 +129,10 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 04</h2>
+                    <div class="combo_price">
+                        <span class="current_prefix manual_price">100</span>
+                        <span class="current_prefix sale_price">50</span>
+                    </div>
                 </div>
             </div>
             <div class="item">
@@ -124,9 +140,15 @@
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 05</h2>
+                    <div class="combo_price">
+                        <span class="current_prefix manual_price">100</span>
+                        <span class="current_prefix sale_price">50</span>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <a href="/user/contact.html" class="contact_btn custom_btn btn_black">Liên hệ thuê</a>
 
         <!-- thumbnail -->
         <div class="thumbnail">
